--- a/top100games/Podfile
+++ b/top100games/Podfile
@@ -1,17 +1,16 @@
 # Uncomment the next line to define a global platform for your project
-platform :ios, '9.0'
+# platform :ios, '9.0'
 
 target 'top100games' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
 
   # Pods for top100games
-  pod 'Alamofire', '4.1'
-  pod 'Moya', '8.0.5'
-  
+  pod 'Alamofire'
+  pod 'Moya'
+
   target 'top100gamesTests' do
     inherit! :search_paths
-    
     # Pods for testing
   end
 
